increase hubspot input font-size to min 16px to prevent auto-zooming on ios

--- a/blocks/hubspot-form/hubspot-form.css
+++ b/blocks/hubspot-form/hubspot-form.css
@@ -30,6 +30,7 @@
 .embed-hbspot-form .hs-input {
   border-bottom: 1px solid var(--color-black);
   padding: var(--spacing-xxs) 0 !important;
+  font-size: 16px;
 }
 
 .embed-hbspot-form textarea.hs-input {
@@ -143,6 +144,10 @@
 
   .embed-hbspot-form label {
     padding-bottom: var(--spacing-xxs);
+  }
+
+  .embed-hbspot-form .hs-input {
+    font-size: var(--body-font-size-s);
   }
 
   .hs_message {  /* stylelint-disable */
